# git-pluck

./: .gitignore  Cargo.toml  LICENSE  README.md  config_examples.pluck  pluck_examples.cfg  rust-toolchain.toml  rustfmt.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
src/: cache.rs  cli.rs  config.rs  error.rs  log.rs  main.rs  map_modify.rs  parent.rs  pluck.rs  tree.rs
tests/: integration.rs  integration_complex.rs  testconfig
tests/utils/: Cargo.toml
tests/utils/src/: lib.rs
